Changelog
=========

0.0.11 (unreleased)
-------------------

- Nothing changed yet.


0.0.10 (2012-02-03)
-------------------

- Add a new recipe called Select. This can be used in conjuction with
  isotoma.recipe.facts to customize your buildout based on the environment you
  are running it in::

  [facts]
  recipe = isotoma.recipe.facts

  [host-lucid]
  somesetting = 1

  [host-karmic]
  somesetting = 2

  [host]
  recipe = missingbits:select
  case = ${facts:lsb.codename}


0.0.9 (2012-01-30)
------------------

- Add a method for "peeking" at configruation files we haven't loaded yet. This
  is useful if you have awkward inter-dependencies like your Plone config knows
  its preferred version of Zope, but you can't load it till you have loaded
  Zope!

  You can use it like this::

      value = stack.peek_unloaded("someconfig.cfg", "somesection", "somekey")

- Add a method for "peeking" into data that isn't fully evaluated - data that
  is loaded but before you have called ``apply()``. You can use it like this::

      value = stack.peek("somesection", "somekey")


0.0.8 (2011-09-21)
------------------

- Don't reset ``self.name`` when resetting things - this works around
  ``${:path}`` being invalid and the settings the stack uses shouldn't be changing
  in flight - its just too weird!


0.0.7 (2011-09-15)
------------------

- Fix optional logic


0.0.6 (2011-09-15)
------------------

- Prior to the injection of any stack configuration, buildout._data is cleared
  (with the exception of the buildout and versions parts), causing any already-
  resolved parts to be re-resolved once the stack has been applied, and the
  original configuration re-applied.


0.0.5 (2011-09-09)
------------------

- Optional config loading support


0.0.4 (2011-09-02)
------------------

- All stacks automatically get a 'path' variable that points to their assets
- Fix sibpath for namespaced modules


0.0.3 (2011-09-02)
------------------
